[package]
name = "real_time_satellite"
version = "0.1.0"
edition = "2021"
default-run = "real_time_satellite"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
rand = "0.8.5"
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
hex = "0.4"
